--- a/style2.css
+++ b/style2.css
@@ -7,6 +7,10 @@ body {
     background-color: #F3FBFB;
 }
 
+a{
+    text-decoration: none;
+}
+
 /*-------Header-----------------------------------*/
 
 
@@ -280,6 +284,19 @@ nav a{
     padding: .5rem;
 }
 
+.work__projects{
+    display: flex;
+    justify-content: space-around;
+}
+
+.project--item{
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
+}
 
 /*------------------Comissions---------------------------*/
 
@@ -288,4 +305,141 @@ nav a{
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
+}
+
+.com__open{
+    background-image:  url("img/Boceto\ comisiones2\ 1.png");
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.com__open h2{
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Bauhaus 93';
+}
+
+.com__open p{
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.2rem;
+}
+
+.com__open button{
+    font-family: 'Nunito', sans-serif;
+    width: 15rem;
+    font-size: 1.2rem;
+    border: 1px solid #272343;
+    background-color: transparent;
+    border-radius: 10px;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    padding: .5rem;
+}
+
+.com__form {
+    background-color: #45C1F0;
+    display: flex;
+    justify-content: space-around;
+    height: 60vh;
+}
+
+.com__form--contact{
+    margin-top: 4%;
+}
+
+.com__form--contact h2{
+    font-size: 2rem;
+    font-family: 'Bauhaus 93';
+}
+
+.com__form--contact p{
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
+
+.com__form--contact h3{
+    margin-top: 1rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.4rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    margin-top: 14%;
+    width: 30vw;
+    height: 40vh;
+}
+
+form h3 {
+    font-size: 1.3rem;
+    font-family: 'poppins';
+}
+
+.form__items{
+    margin-left: 10%;
+}
+
+.form--send{
+    margin-left: 50%;
+    box-sizing: border-box;
+    background: #272343;
+    border-radius: 15px 0px;
+    color: white;
+    width: 20%;
+}
+
+input::placeholder {
+    font-size: 1.2em;
+    font-family: "poppins";
+  }
+
+  input{
+      margin-top: 2%;
+      width: 70%;
+      height: 4vh;  
+      border: 1px solid ;
+    border-radius: 3px;
+    background-color: #F3FBFB;
+  }
+
+  .input--mes{
+    margin-top: 2%;
+    width: 70%;
+    height: 10vh;  
+}
+
+/*------------------Footer---------------------------*/
+
+footer {
+    display: flex;
+    flex-direction: row;
+    background-color: #272343;
+    justify-content: space-between;
+    align-items: center;
+    height: 6vh;
+}
+
+footer h3 {
+    font-family: 'Nunito', sans-serif;
+    color: #fff;
+    margin-left: 4%;
+}
+
+.social__footer{
+    margin-right: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.social__footer img{
+    width: 2rem;
+    margin-right: 1rem;
 }
