--- a/comissions.css
+++ b/comissions.css
@@ -1,4 +1,4 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
@@ -53,6 +53,7 @@ body {
   height: 151px;
   left: 0px;
   top: -9px;
+  background-color: #45C1F0;
 }
 
 .btnAbout {
@@ -78,7 +79,9 @@ body {
   font-size: 32px;
   line-height: 48px;
   text-align: center;
+  border: none;
 
+  background-color: #45C1F0;
   color: #000000;
 }
 
@@ -104,7 +107,9 @@ body {
   font-size: 32px;
   line-height: 48px;
   text-align: center;
+  border: none;
 
+  background-color: #45C1F0;
   color: #000000;
 }
 
@@ -130,7 +135,9 @@ body {
   font-size: 32px;
   line-height: 48px;
   text-align: center;
+  border: none;
 
+  background-color: #45C1F0;
   color: #000000;
 }
 
@@ -193,7 +200,7 @@ body {
   top: 142px;
 
   /* background: pink; */
-  background: center fixed no-repeat url('https://tinyurl.com/jp56xcg');
+  background: center fixed no-repeat url("https://tinyurl.com/jp56xcg");
 }
 
 .headTxt1 {
@@ -238,13 +245,18 @@ body {
 
 .containerGrilla {
   /* Auto layout */
-
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 547px);
+  grid-template-rows: repeat(2, 928px);
+  
+  gap: 20px;
+  padding: 82.5px 120px;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0px 120px;
-  gap: 20px;
+  gap: 20px; */
 
   position: absolute;
   width: 1920px;
@@ -376,7 +388,7 @@ body {
   border-radius: 50px;
 }
 
-.btnQuote:hover{
+.btnQuote:hover {
   background-color: #151325;
 }
 
@@ -446,8 +458,13 @@ body {
   font-size: 24px;
   line-height: 36px;
   list-style: initial;
+  
 
   color: #000000;
+}
+
+li{
+  list-style: none;
 }
 
 .comissContenTextDraw {
@@ -542,6 +559,12 @@ body {
 }
 
 .comissGalleryGrilla {
+  display: grid;
+  grid-template-columns: repeat(4, 400px);
+  grid-template-rows: repeat(2, 382px);
+  gap: 20px;
+  row-gap: 79px;
+  padding: 50px 120px;
   justify-items: center;
   align-items: center;
   height: 1038px;
@@ -552,12 +575,26 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0px 120px;
-  gap: 20px;
-
+  gap: 20px;  
   width: 400px;
   height: 382px;
   background: #45c1f0;
   border-radius: 10px;
+}
+
+.textcomission{
+  /* Textos <p><a> */
+width: 400px;
+height: 39px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 36px;
+text-align: center;
+
+color: #000000;
 }
 
 .comissFooter {
@@ -765,7 +802,7 @@ body {
   border-radius: 20px;
 }
 
-.btnSend:hover{
+.btnSend:hover {
   background-color: #151325;
 }
 
@@ -800,6 +837,7 @@ body {
   height: 108px;
   left: 0px;
   top: 5050px;
+  z-index: -1;
 
   /* Azul - Textos */
 
@@ -837,9 +875,6 @@ body {
   right: 356.74px;
   bottom: 34.82px;
 
-  /* Blanco */
-
-  background: #ffffff;
 }
 
 .footerIconSocialInst {
@@ -851,9 +886,6 @@ body {
   right: 284.12px;
   bottom: 35.21px;
 
-  /* Blanco */
-
-  background: #ffffff;
 }
 
 .footerIconSocialLin {
@@ -865,9 +897,6 @@ body {
   right: 205px;
   bottom: 35px;
 
-  /* Blanco */
-
-  background: #ffffff;
 }
 
 .footerIconSocialBe {
@@ -879,8 +908,32 @@ body {
   right: 122px;
   bottom: 39.25px;
 
-  /* Blanco */
-
-  background: #ffffff;
 }
 
+.modal{
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  pointer-events: none;
+  background-color: #000000bd;
+}
+
+.modal--show{
+  opacity: 1;
+  pointer-events: unset;
+  transition: opacity .6s;
+}
+
+.modal__container{
+margin: auto;
+width: 90%;
+max-width: 600px;
+max-height: 90%;
+border-radius: 6px;
+padding: 3em;
+background-color: #ffffff;
+}
