--- a/style.css
+++ b/style.css
@@ -7,397 +7,591 @@ body {
     background-color: #F3FBFB;
 }
 
-.icono{
-    /* image 3 2 */
-    position: absolute;
-    width: 114.67px;
-    height: 126.92px;
-    left: 150px;
-    top: 23.08px;
+a{
+    text-decoration: none;
+    color: black;
+}
+
+/*-------Header-----------------------------------*/
+
+
+header {
+    display: flex;
+    flex-direction: row;
+    background-color: #45C1F0;
+    justify-content: flex-start;
+    align-items: center;
+    height: 10vh;
+    position: sticky;
+    top: 0; 
+    z-index: 1000;
+}
+
+.header__logo{
+    margin-left: 20%;
+    display: flex;
+    align-items: center;
+}
+
+.header__logo--img{
+    width: 4vw;
+}
+
+.header__logo--text{
+    margin-left: 1rem;   
+    width: 10rem;
+    font-family: 'Bauhaus 93';
+    font-size: 2.5vh;
+    text-justify: center;
+}
+
+nav{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    font-family: 'poppins';
+    font-size: 2vh;    
+}
+
+nav a{
+    margin-left: 2rem;
+    width: 7rem;
+
+}
+
+.social{
+    margin-right: 10%;
+    /*width: 2rem;*/
+    display: flex;
+    justify-content: space-around;
+}
+
+.social img{
+    width: 2rem;
+    margin-right: 1rem;
+}
+
+/*------------------Main---------------------------*/
+
+.main{
+    background-color: #45C1F0;    
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.container__text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 7%;
+}
+
+.container__text--center{
+    transform: translatex(-55%);
+}
+
+.container__text--center h2{
+
+    margin-bottom: 2rem;
+    font-family: 'Bauhaus 93';
+    text-align: center;
+    font-size:  4rem;
+}
+
+.container__text--center h3{
+    margin-bottom: 10%;
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-size:  1.2rem;
+}
+
+.container__text--center button {
+    border: 1px solid #272343;
+    border-radius: 30px;
+    font-family:'Nunito', sans-serif;
+    background-color: transparent;
+}
+
+.container__text--center button  p{
+    padding: 1rem;
+    width: 14rem;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.container__img{
+    display: flex;
+    align-items: flex-end;
+}
+
+.main--img{
+    width: 55vw;   
+}
+
+/*------------------About me---------------------------*/
+
+.about{
+    height: 90vh;  
+    display: flex;
+    flex-direction: column;
+    margin-top: 10vh;
+}
+
+.about__content{
+    height: 55%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about__content--text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+}
+
+.about__content--text h2{
+    font-family: 'Bauhaus 93';
+    margin-bottom: 2rem;
+}
+
+.about__content--text p {
+    font-family: 'Nunito', sans-serif;
+}
+
+.about__content--carr{
+    background-color: #FF8BD2;
+   
+}
+
+.swiper {
+    width: 40vw;
+    height: 40vh;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+.containers{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.containerSkills{
+    margin: 1rem;
+    width: 25%;
+    height: 40vh;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+.container--pink{
+    background-color: #FF8BD2;
+}
+
+.container--yellow{
+    background-color: #FFDD80;
+}
+
+.container--blue{
+    background-color: #45C1F0;
+}
+
+
+.containerSkills h3{
+    font-family: 'Bauhaus 93';
+}
+.containerSkills p{
+    font-family: 'Nunito', sans-serif;
+    padding: 2rem;
+}
+
+.containerSkills img{
+    width: 50%;
+}
+
+/*------------------My work---------------------------*/
+
+.work{
+    height: 90vh;  
+    display: flex;
+    flex-direction: column;
+    margin-top: 10vh;
+    background-color: #F3FBFB;
+}
+
+.work__header{
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    background-color:  #F3FBFB;
+    justify-content: center;
+    align-items: center;
+}
+
+.work__header h2{
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Bauhaus 93';
+}
+
+.work__header p{
+    font-family: 'Nunito', sans-serif;
+  
+    font-size: 1.2rem;
+}
+
+.work__header button{
+    font-family: 'Nunito', sans-serif;
+    width: 10rem;
+    font-size: 1.2rem;
+    border: 1px solid #272343;
+    background-color: transparent;
+    border-radius: 50px;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding: .5rem;
+}
+
+.work__projects{
+    margin-left: 10%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    overflow-y: scroll;
+   
+}
+
+.project--item{
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
+    font-weight: 400;
+}
+
+.project--item input{
+    width: 12vw;
+    height: 20vh;
+}
+
+/*------------------Comissions---------------------------*/
+
+.comissions{
+    height: 90vh;  
+    display: flex;
+    flex-direction: column;
+    margin-top: 5vh;
+}
+
+.com__open{
+    background-color: #272343;
+    color: #F3FBFB;
+    height: 40vh;
+    display: flex;
+    margin-top: 4vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.com__open h2{
     
-    background: url(/img/Icono.png);
-    background-size: contain;
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Bauhaus 93';
 }
 
-/* Celeste */
-.celeste {
-position: absolute;
-width: 241.28px;
-height: 81px;
-left: 286px;
-top: 46.04px;
-
-font-family: 'Bauhaus 93';
-font-style: normal;
-font-weight: 400;
-font-size: 64px;
-line-height: 93px;
-text-align: center;
-
-color: #272343;
+.com__open p{
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.2rem;
 }
 
-.btnAbout{
-    /* Frame 14 */
-box-sizing: border-box;
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 10px 24px;
-gap: 10px;
-
-position: absolute;
-width: 217px;
-height: 71px;
-left: 1144px;
-top: 56.04px;
-
-border: 3px solid #FF8BD2;
-border-radius: 15px 0px;
-}
-.txtAbout{
-    /* About me */
-width: 169px;
-height: 51px;
-border: none;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-background: #BAE8E8;
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 0;
+.com__open button{
+    font-family: 'Nunito', sans-serif;
+    width: 15rem;
+    font-size: 1.2rem;
+    border: 1px solid white;
+    color: white;
+    background-color: transparent;
+    border-radius: 10px;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    padding: .5rem;
 }
 
-.btnWork{
-    /* Frame 15 */
-    /* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 10px 24px;
-gap: 10px;
-
-position: absolute;
-width: 136px;
-/* height: 71px; */
-left: 1408.8px;
-top: 56.04px;
-
-border-radius: 0px;
-}
-.txtWork{
-width: 88px;
-height: 51px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-border: none;
-background: #BAE8E8;
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
+.com__form {
+    background-color: #FFDD80;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60vh;
 }
 
-.btnContact{
-/* Frame 16 */
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 10px 24px;
-gap: 10px;
-
-position: absolute;
-width: 187px;
-/* height: 71px; */
-left: 1592.61px;
-top: 56.04px;
+.com__form--contact{
+    margin-top: -4%;
 }
 
-.txtContact{
-/* Contact */
-width: 139px;
-height: 51px;
+.com__form--contact h2{
+    font-size: 2rem;
+    font-family: 'Bauhaus 93';
+}
 
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-border: none;
-background: #BAE8E8;
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
+.com__form--contact p{
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
 
+.com__form--contact h3{
+    margin-top: 1rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.4rem;
+}
+
+.com__form--contact--mail{
+    margin-top: 1rem;
+    display: flex;
+}
+
+.com__form--contact--mail img{
+    margin-top: .8rem;
+    margin-right: 1rem;
+    width: 10%;
+    height: 10%;
+}
+
+.img__footer{
+    width: 90%;
+    height: 60%;
+}
+
+/*.form__img{
+ 
+
+}*/
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+   
+    width: 30vw;
+    height: 40vh;
+}
+
+form h3 {
+    font-size: 1.3rem;
+    font-family: 'poppins';
+}
+
+.form__items{
+    margin-left: 10%;
+}
+
+.form--send{
+    margin-left: 50%;
+    box-sizing: border-box;
+    background: #272343;
+    border-radius: 15px 0px;
+    color: white;
+    width: 20%;
+}
+
+input::placeholder {
+    font-size: 1.2em;
+    font-family: "poppins";
+  }
+
+  input{
+      margin-top: 2%;
+      width: 70%;
+      height: 4vh;  
+      border: 1px solid ;
+    border-radius: 3px;
+    background-color: #F3FBFB;
+  }
+
+  .input--mes{
+    margin-top: 2%;
+    width: 70%;
+    height: 10vh;  
 }
 
 
-/* Ellipse 3 */
-.ellipse3 {
-    position: absolute;
-    width: 1263.67px;
-    height: 771.09px;
-    left: 776.97px;
-    top: -199.48px;
-    z-index: -1;
-    
-    background: #BAE8E8;
+
+/*------------------Footer---------------------------*/
+
+footer {
+    display: flex;
+    flex-direction: row;
+    background-color: #272343;
+    justify-content: space-between;
+    align-items: center;
+    height: 6vh;
 }
 
-/* Ellipse 4 */
-.ellipse4 {
-position: absolute;
-width: 635.18px;
-height: 737.09px;
-left: -398.65px;
-right: 1527px;
-top: 422.72px;
-/* bottom: 3124.6px; */
-z-index: -1;
-
-background: linear-gradient(153.26deg, #BAE8E8 43.93%, #FF8BD2 138.03%);
-transform: rotate(-135.28deg);
+footer h3 {
+    font-family: 'Nunito', sans-serif;
+    color: #fff;
+    margin-left: 4%;
 }
 
-.homeInstagram{
-/* bxl:instagram-alt */
-position: absolute;
-width: 49px;
-height: 50px;
-left: 78.81px;
-right: 1816.69px;
-top: 760.7px;
-bottom: 3648.79px;
+.social__footer{
+    margin-right: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.homeBehance{
-    /* Vector */
-position: absolute;
-left: 74.04px;
-right: 1795.96px;
-top: 828.42px;
-bottom: 3562.33px;
+
+.social__footer img{
+    width: 2rem;
+    margin-right: 1rem;
 }
 
-.homeTweeter{
-/* Vector */
-position: absolute;
-width: 49px;
-height: 50px;
-left: 74.64px;
-right: 1798.06;
-top: 899.72px;
-bottom: 3483.82px;
+/*------------ Modal (background)---------- */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow-y:hidden;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 12% auto; /* 15% from the top and centered */
+   
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
 
+  .close img{
+      margin-top: 1rem;
+      width: 50%;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+  /*------------ Modal Styles---------- */
+
+  .project--item__modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+    .mySwiperModal{
+        width: 100%;
+        height: 100%;
+    }
+
+   #img__Carr{
+       height: 40vh;
+       width: 100%;
+   } 
+
+
+
+  .project--item__modal--text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30vw;
+    margin-left: 2rem;
+  }
+  
+  .project--item__modal--text h3{
+    margin-top: 1rem;  
+    font-family: 'Nunito';
+    font-weight: 1000;
+  }
+  .project--item__modal--text p{
+    font-family: 'Nunito';
+    font-weight: 100;
+  }
+
+.project--item__modal--textDesc{
+    margin-top: 1rem; 
+    font-family: 'Nunito';
+    font-weight: 500;    
 }
 
-/* Hello */
-.hello{
-position: absolute;
-width: 719px;
-height: 314.39px;
-left: 816.5px;
-top: 186.06px;
-
-font-family: 'Bauhaus 93';
-font-style: normal;
-font-weight: 400;
-font-size: 160px;
-line-height: 95.04%;
-/* or 152px */
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-color: #272343;
+.project--item__modal--text button {
+    font-family: 'Nunito', sans-serif;
+    width: 10rem;
+    font-size: 1rem;
+    border: 1.5px solid #272343;
+    background-color: transparent;
+    border-radius: 50px;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    padding: .5rem;
+    margin-bottom: 1rem;
 }
 
-/* World!! */
-.world{
-position: absolute;
-width: 719px;
-height: 314.39px;
-left: 836px;
-top: 343.26px;
-
-font-family: 'Bauhaus 93';
-font-style: normal;
-font-weight: 400;
-font-size: 180px;
-line-height: 95.04%;
-/* or 171px */
-
-display: flex;
-align-items: center;
-justify-content: center;
-color: #272343;
-}
-
-/* Rectangle 23 */
-.rectangle23{
-    position: absolute;
-    width: 6px;
-    height: 200px;
-    left: 1108px;
-    top: 659.67px;
-    
-    background: #FFDD80;
-}
-
-/* I´m Celeste Davalos */
-.r23p1{
-    position: absolute;
-    width: 338px;
-    height: 51px;
-    left: 1134.11px;
-    top: 671.67px;
-    
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 51px;
-    /* identical to box height */    
-    color: #272343;
-}
-
-.r23p2{
-/* A Graphic Designer, UI/UX Designer */
-position: absolute;
-width: 603px;
-height: 51px;
-left: 1134.11px;
-top: 722.67px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-}
-
-.r23p3{
-    /* and an Illustrator. */
-position: absolute;
-width: 303px;
-height: 51px;
-left: 1134.11px;
-top: 773.67px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-}
-
-/* Rectangle 24 */
-.rectangle24{
-position: absolute;
-width: 709.57px;
-height: 705.46px;
-left: 215px;
-top: 195px;
-
-background: url(/img/selfie2.png);
-background-size: contain;
-}
-
-.rectangle40{
-    /* Rectangle 40 */
-position: absolute;
-height: 1280px;
-left: 0px;
-top: 110px;    
-}
-
-.rectangle2{
-    /* Rectangle 2 */
-box-sizing: border-box;
-
-position: absolute;
-width: 1405px;
-height: 745px;
-left: 150px;
-top: 1166px;
-z-index: -1;
-
-background: #FFDD80;
-border-radius: 0px 0px 0px 330.342px;
-}
-
-.r2title{
-    /* About me */
-position: absolute;
-width: 169px;
-height: 51px;
-left: 176px;
-right: 1060px;
-top: 72.47px;
-bottom: 621.53px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 34px;
-line-height: 51px;
-/* identical to box height */
-color: #272343;
-}
-
-.r2txt{
-position: absolute;
-width: 642px;
-height: 373px;
-left: 1726x;
-right: 587px;
-top: 171.53px;
-bottom: 200.47px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-line-height: 45px;
-
-color: #272343;
-}
-
-.imgCeleste{
-    /* Rectangle 22 */
-position: absolute;
-width: 668px;
-height: 820.86px;
-left: 1102px;
-top: 1141px;
-
-background: url(./img/celeste.png);
-border-radius: 288.605px;
-}
+  
+  .tools--img img{
+    width: 3vw;
+    height: 5vh;
+  }
