cambio de nombre de carp img a img1

--- a/comissions.css
+++ b/comissions.css
@@ -15,7 +15,7 @@ body {
   left: 120px;
   top: 33.5px;
 
-  background: url(/img/Icono.png);
+  background: url(/img1/Icono.png);
   background-size: contain;
 }
 
