--- a/style2.css
+++ b/style2.css
@@ -11,6 +11,12 @@ a{
     text-decoration: none;
 }
 
+.comission{
+    
+    color: white;
+    
+}
+
 /*-------Header-----------------------------------*/
 
 
