--- a/style2.css
+++ b/style2.css
@@ -9,12 +9,7 @@ body {
 
 a{
     text-decoration: none;
-}
-
-.comission{
-    
-    color: white;
-    
+    color: black;
 }
 
 /*-------Header-----------------------------------*/
@@ -33,7 +28,7 @@ header {
 }
 
 .header__logo{
-    margin-left: 4%;
+    margin-left: 20%;
     display: flex;
     align-items: center;
 }
@@ -92,11 +87,11 @@ nav a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 17%;
+    margin-bottom: 7%;
 }
 
 .container__text--center{
-    transform: translatex(-40%);
+    transform: translatex(-55%);
 }
 
 .container__text--center h2{
@@ -134,7 +129,7 @@ nav a{
 }
 
 .main--img{
-    width: 60vw;   
+    width: 55vw;   
 }
 
 /*------------------About me---------------------------*/
@@ -276,6 +271,7 @@ nav a{
 
 .work__header p{
     font-family: 'Nunito', sans-serif;
+  
     font-size: 1.2rem;
 }
 
@@ -288,12 +284,17 @@ nav a{
     border-radius: 50px;
     margin-left: 2rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
     padding: .5rem;
 }
 
 .work__projects{
-    display: flex;
-    justify-content: space-around;
+    margin-left: 10%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    overflow-y: scroll;
+   
 }
 
 .project--item{
@@ -303,6 +304,12 @@ nav a{
     width: 10vw;
     font-family: 'Nunito', sans-serif;
     text-align: center;
+    font-weight: 400;
+}
+
+.project--item input{
+    width: 12vw;
+    height: 20vh;
 }
 
 /*------------------Comissions---------------------------*/
@@ -311,7 +318,7 @@ nav a{
     height: 90vh;  
     display: flex;
     flex-direction: column;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
 .com__open{
@@ -326,6 +333,7 @@ nav a{
 }
 
 .com__open h2{
+    
     text-align: center;
     font-size: 2rem;
     font-family: 'Bauhaus 93';
@@ -353,11 +361,12 @@ nav a{
     background-color: #FFDD80;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     height: 60vh;
 }
 
 .com__form--contact{
-    margin-top: 4%;
+    margin-top: -4%;
 }
 
 .com__form--contact h2{
@@ -377,12 +386,35 @@ nav a{
     font-size: 1.4rem;
 }
 
+.com__form--contact--mail{
+    margin-top: 1rem;
+    display: flex;
+}
+
+.com__form--contact--mail img{
+    margin-top: .8rem;
+    margin-right: 1rem;
+    width: 10%;
+    height: 10%;
+}
+
+.img__footer{
+    width: 90%;
+    height: 60%;
+}
+
+/*.form__img{
+ 
+
+}*/
+
+
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: white;
-    margin-top: 14%;
+  
+   
     width: 30vw;
     height: 40vh;
 }
@@ -425,6 +457,8 @@ input::placeholder {
     height: 10vh;  
 }
 
+
+
 /*------------------Footer---------------------------*/
 
 footer {
@@ -449,7 +483,115 @@ footer h3 {
     align-items: center;
 }
 
+
 .social__footer img{
     width: 2rem;
     margin-right: 1rem;
 }
+
+/*------------ Modal (background)---------- */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow-y:hidden;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 12% auto; /* 15% from the top and centered */
+   
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close img{
+      margin-top: 1rem;
+      width: 50%;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+  /*------------ Modal Styles---------- */
+
+  .project--item__modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+    .mySwiperModal{
+        width: 100%;
+        height: 100%;
+    }
+
+   #img__Carr{
+       height: 40vh;
+       width: 100%;
+   } 
+
+
+
+  .project--item__modal--text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30vw;
+    margin-left: 2rem;
+  }
+  
+  .project--item__modal--text h3{
+    margin-top: 1rem;  
+    font-family: 'Nunito';
+    font-weight: 1000;
+  }
+  .project--item__modal--text p{
+    font-family: 'Nunito';
+    font-weight: 100;
+  }
+
+.project--item__modal--textDesc{
+    margin-top: 1rem; 
+    font-family: 'Nunito';
+    font-weight: 500;    
+}
+
+.project--item__modal--text button {
+    font-family: 'Nunito', sans-serif;
+    width: 10rem;
+    font-size: 1rem;
+    border: 1.5px solid #272343;
+    background-color: transparent;
+    border-radius: 50px;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    padding: .5rem;
+    margin-bottom: 1rem;
+}
+
+  
+  .tools--img img{
+    width: 3vw;
+    height: 5vh;
+  }
