--- a/style2.css
+++ b/style2.css
@@ -132,7 +132,7 @@ nav a{
     text-align: center;
     font-family: 'Nunito', sans-serif;
     font-size:  1.2rem;
-    line-height: 1.4rem;
+    line-height: 1.8rem;
 }
 
 .container__text--center button {
@@ -182,6 +182,13 @@ nav a{
     width: 20%;
 }
 
+.about__content__text--description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2vh; 
+}
+
 .about__content--text h2{
     font-family: 'Bauhaus 93';
     margin-bottom: 2rem;
@@ -189,6 +196,7 @@ nav a{
 
 .about__content--text p {
     font-family: 'Nunito', sans-serif;
+    font-weight: bold;
 }
 
 .about__content--carr{
@@ -241,6 +249,8 @@ nav a{
 .containerSkills{
     margin: 1rem;
     width: 25%;
+    padding: .2rem;
+
     height: 40vh;
     border-radius: 20px;
     display: flex;
@@ -266,6 +276,7 @@ nav a{
 }
 .containerSkills p{
     font-family: 'Nunito', sans-serif;
+    font-size: 2vh;
     padding: 2rem;
 }
 
@@ -355,7 +366,7 @@ nav a{
     position: absolute; 
     overflow: hidden;
     width: 100%;
-
+   
     z-index: -1;
   
 }
@@ -366,7 +377,8 @@ nav a{
 }
 
 .com__open{
-    
+    background:  fixed repeat url("img/Banner comisiones.png");
+    background-position:  top;
     color: #F3FBFB;
     height: 40vh;
     display: flex;
@@ -461,11 +473,9 @@ nav a{
 form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-  
-   
+    justify-content: center;  
     width: 30vw;
-    height: 40vh;
+    height: 50vh;
 }
 
 form h3 {
@@ -475,13 +485,18 @@ form h3 {
 
 .form__items{
     margin-left: 10%;
+   
+}
+
+.form--border{
+    border: 2px solid;
 }
 
 .form--send{
-    margin-left: 50%;
+
     box-sizing: border-box;
     background: #272343;
-    border-radius: 15px 0px;
+    border-radius: 15px;
     color: white;
     width: 20%;
 }
@@ -555,8 +570,8 @@ footer h3 {
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
-    margin: 12% auto; /* 15% from the top and centered */
-    
+    margin: 9% auto; /* 15% from the top and centered */
+    border-radius: 20px;
     border: 1px solid #888;
     width: 60%; /* Could be more or less, depending on screen size */
   }
