--- a/style2.css
+++ b/style2.css
@@ -49,8 +49,24 @@ header {
 
 }
 
+.header__logo__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 5.3vw;
+}
+
 .header__logo--img{
-    width: 4vw;
+    
+    max-width:100%;
+    max-height:100%;
+}
+
+.header__logo--imgGIF{
+    display: none;
+    max-height:100%;
+    max-width:120%;
+    object-fit: contain;
 }
 
 .header__logo--text{
@@ -675,8 +691,8 @@ footer h3 {
 
   
   .tools--img img{
-    width: 2.5vw;
-    height: 5vh;
+    width: 3vw;
+    height: min-content;
   }
 
   .swiper-button-next {
