--- a/comissions.css
+++ b/comissions.css
@@ -9,7 +9,15 @@
     flex-direction: column;
     background-color: #f3fbfb;
     width: 100%;
-    height: 513.6858475894246vh;
+    /* height: 513.6858475894246vh; */
+  }
+
+  .iconDonut{
+    display: none;
+  }
+
+  .iconDonutGif{
+    display: flex !important;
   }
 
   nav {
@@ -30,13 +38,10 @@
     align-items: center;
     padding: 0px;
 
-    position: static;
     width: 100%;
     height: 232px;
-    left: 0px;
-    top: 9.720062208398133vh;
 
-    background: center fixed no-repeat url("https://tinyurl.com/jp56xcg");
+    background: center fixed repeat url("img/Banner\ comisiones.jpg");
   }
 
   .headTxt1 {
@@ -48,27 +53,27 @@
     font-family: "Bauhaus 93";
     font-style: normal;
     font-weight: 400;
-    font-size: 4em;
+    font-size: 2em;
     line-height: 1em;
     text-align: center;
 
-    color: #000;
+    color: #F3FBFB;
   }
 
   .headTxt2 {
     display: flex;
     justify-content: center;
-    width: 51.875rem;
+    width: 41.875rem;
     height: 5.5625rem;
 
     font-family: "Poppins";
     font-style: normal;
-    font-weight: 400;
-    font-size: 2em;
+    font-weight: 300;
+    font-size: 1.25em;
     line-height: 1em;
     text-align: center;
 
-    color: #ffffff;
+    color: #F3FBFB;
   }
 
   .containerGrilla {
@@ -356,8 +361,15 @@
 .footerComissionsBar{
     width: 100%;
 }
+  .modal__Image{
+    width: 90%;
+    height: 100%;
+    padding: auto;
+    border-radius: 6px;
+    margin: 0 0.5rem 1rem 1rem;
+  }
 
-  .modal {
+  .modalComission {
     display: flex;
     position: fixed;
     top: 0;
@@ -377,12 +389,21 @@
   }
 
   .modal__container {
+    display: flex;
+    justify-content: center;
     margin: auto;
-    width: 100%;
     height: 100%;
     max-width: 400px;
     max-height: 400px;
     border-radius: 6px;
-    padding: 3em;
+    padding: 1em;
     background-color: #ffffff;
+  }
+
+  .modal__close{
+    background-color: #ffffff;
+    border: none;
+    align-self: start;
+    font-weight: 600;
+    font-size: 1.5em;
   }
