Commit Walter Arreglo errores index

--- a/style2.css
+++ b/style2.css
@@ -704,7 +704,7 @@ footer h3 {
 
 
   .swiper-button-prev {
-    background-image: url("img/button_left.png") !important;
+    background-image: url("img/Button_left.png") !important;
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center;
